--- a/.drone.yml
+++ b/.drone.yml
@@ -3,8 +3,8 @@ type: docker
 name: default
 
 steps:
-- name: greeting
-  image: alpine
+- name: build
+  image: node:14-alpine
   commands:
-  - echo hello
-  - echo world
+  - npm install
+  - npm test
