--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "example-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nyc --reporter=cobertura --reporter=text-summary mocha"
+    "test": "nyc --reporter=cobertura --reporter=text-summary mocha",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "cookie-parser": "~1.4.6",
@@ -16,6 +18,9 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0"
   }
