--- a/.gitignore
+++ b/.gitignore
@@ -101,8 +101,7 @@ dist
 .dynamodb/
 
 # TernJS port file
-<<<<<<< HEAD
 .tern-port
-=======
-.tern-port
->>>>>>> b77c34f (first commit)
+
+junit.xml
+report.html
