--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nyc --reporter=cobertura --reporter=text-summary mocha",
+    "test": "jest --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -16,12 +16,25 @@
     "morgan": "~1.10.0"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "chai-http": "^4.3.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "mocha": "^10.0.0",
-    "nyc": "^15.1.0"
+    "jest": "^28.1.3",
+    "jest-junit": "^14.0.0",
+    "supertest": "^6.2.4"
+  },
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
+    ],
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
