--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "commonjs": true,
         "es2021": true,
         "node": true,
-        "mocha": true
+        "jest": true
     },
     "extends": [
         "airbnb-base"
@@ -13,6 +13,6 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+        "no-unused-vars": ["warn", { "argsIgnorePattern": "next" }]
     }
 }
